# Pagina-trilingue

./: .env  README.md  app.py  config.json  index.html  manifest.json  offline.html  privacy-policy.html  pyproject.toml  robots.txt  service-worker.js  sitemap.xml
css/: styles.css
js/: main.js
locales/: en.json  es.json  th.json
templates/: base.html  index.html
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/es/LC_MESSAGES/: messages.mo  messages.po
translations/th/LC_MESSAGES/: messages.mo  messages.po
